package br.com.car_rental_system.entity;

public interface DocumentoComercial {
    private String status;
    private String nDocumento;
    private String duracao;
    private String tipo;
    private String proponente;     // CPF
    private String contratante;    // CPNJ    
    private String objetoContrato;  // PLACA   
    private Double valorTotal;
    
    
    public Boolean aprovarDocumento(){

    }
}
