package br.com.car_rental_system.utils;

enum Prazo {
    DOZE_MESES, VINTE_QUATRO_MESES, TRINTA_SEIS_MESES, QUARENTA_OITO_MESES
}

enum Tipo {
    SEGURO, ALUGUEL, COMPRA
}
enum PapelAgente {
    EMPRESA, BANCO
}