@startuml Sistema de Aluguel de Carros

interface Usuario{
    -nome   : String
    -login  : String
    -senha  : String
    +gets() : String
    +sets() : void
    +CRUD()
}

class Cliente implements Usuario {
    +Cliente(nome, login, senha)
    +Cliente()
    -RG: String
    -CPF: String
    -endereco: String
    -profissao: String
    -empresa: String
    -salarios: String[3]
}


class Aluguel {
    +Aluguel(data, status, contrato)
    +Aluguel()
    -id: int
    -data: Date
    -status: String
    -contrato : Documento

    +CRUD()
}

enum Prazo {
    12
    24
    36
    48
}

enum Tipo {
    Seguro
    Aluguel
    Compra
}

enum PapelAgente {
    Empresa
    Banco
}

class Agente implements Usuario{
   -tipo: PapelAgente[]
   -CNPJ
   -Inscricao
   +Agente(nome, login, senha)
   +Agente()
}

class Automovel {
    +Automovel(matricula, ano, marca, modelo, placa)
    +Automovel()
    -matricula: String
    -ano: int
    -marca: String
    -modelo: String
    -placa: String
    +CRUD()
}

class Contrato implements DocumentoComercial{
    +Contrato(id, tipo, agente, automovel, proprietarioVeiculo)
    +Contrato()
    -contratoCredito      : Contrato
    -id                   : int
    -proprietarioVeiculo  : Usuario
    -codSolicitacao       : String
    +CRUD()
}

class Pedido implements DocumentoComercial{
    +Pedido(id, tipo, agente, automovel, proprietarioVeiculo)
    +Pedido()
    -id                    : int
    -rendimentosDeclarados : String[]
    -compraSolicitada      : Boolean
    -solicitacaoSeguro     : Boolean
    +CRUD()
}

interface DocumentoComercial {
    -status               : String
    -nDocumento           : String
    -duracao              : Prazo
    -tipo                 : Tipo
    -proponente           : Usuario
    -contratante          : Usuario
    -objetoContrato       : Automovel
    -valorTotal           : Double
    +aprovarDocumento()   : Boolean
}

Agente    "1" -- "n" Contrato
Cliente   "1" -- "n" Pedido
Contrato  "1" -- "1" Pedido
Pedido    "1" -- "1" Automovel
Aluguel   "1" -- "1" Contrato
 
@enduml